<resources>

    <!-- Toasts -->
    <string name="toast_battery">Dark Mode activated due to low battery!</string>

    <!-- Titulos de Activities -->
    <string name="app_name">iQueCovid</string>
    <string name="activity_contacts_name">Contacts</string>
    <string name="activity_dashboard_name">Dashboard</string>
    <string name="activity_list_tests_name">Tests</string>
    <string name="activity_counties_name">Counties</string>
    <string name="activity_insert_test_form_name">Add Test</string>
    <string name="activity_edit_test_form_name">Edit Test</string>
    <string name="activity_test_detail_name">Test Details</string>
    <string name="settings_title">Settings</string>

    <!-- Dialog Message SplashScreen -->
    <string name="error_dialog_connection">Connection Error</string>
    <string name="error_dialog_timeout">Timeout Error</string>
    <string name="error_dialog_description">Check Your Internet Connection</string>
    <string name="error_action_cancel">Cancel</string>
    <string name="error_action_retry">Retry</string>


    <!-- Textos de botões -->
    <string name="text_contacts">Get in touch with us, by clicking the following buttons:</string>
    <string name="button_contacts_tel_text">808 24 24 24</string>
    <string name="button_contacts_email_text">atendimento@sns24.gov.pt</string>
    <string name="button_contacts_website_text">www.sns24.gov.pt</string>
    <string name="add_test">Add Test</string>

    <!-- Testos da activity_test_detail -->
    <string name="detail_text_date">Date:</string>
    <string name="detail_text_local">Local:</string>
    <string name="detail_text_result">Result:</string>
    <string name="detail_text_comprovative">Proof:</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="portugal_cases_last_24h">Portugal Cases - Last 24h</string>
    <string name="portugal_flag"> portugalFlag </string>
    <string name="common_symptoms">Common Symptoms</string>
    <string name="tiredness">Tiredness</string>
    <string name="dry_cogh">Dry Cogh</string>
    <string name="fever">Fever</string>
    <string name="reported_symptoms">Reported Symptoms - COVID-19</string>
    <string name="aches_and_pains">Aches and Pains</string>
    <string name="conjunctivitis">Conjunctivitis</string>
    <string name="headache">Headache</string>
    <string name="loss_of_taste_or_smell">Loss of taste or smell</string>
    <string name="difficulty_breathing">Difficulty breathing</string>
    <string name="chest_pain_or_pressure">Chest pain or pressure</string>
    <string name="symptoms">Symptoms</string>
    <string name="waiting_result">Waiting Result</string>
    <string name="location">Location</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="result">Result</string>
    <string name="_01_jan_2021">01 jan 2021</string>
    <string name="date">Date</string>
    <string name="proof">Proof</string>
    <string name="photo_optional">Photo (Optional)</string>
    <string name="submit">Submit</string>
    <string name="take_photo">Take Photo</string>
    <string name="listar_testes">Test List</string>
    <string name="hospital_santa_maria" translatable="false">Hospital Santa Maria</string>
    <string name="new_cases">New Cases</string>
    <string name="recovered">Recovered</string>
    <string name="region">Region</string>
    <string name="death">Death</string>
    <string name="norte">Norte</string>
    <string name="lisboa">Lisboa</string>
    <string name="centro">Centro</string>
    <string name="alentejo">Alentejo</string>
    <string name="faro">Faro</string>
    <string name="azores">Azores</string>
    <string name="madeira">Madeira</string>
    <string name="contactos">Contact</string>
    <string name="diarrhoea">Diarrhoea</string>
    <string name="title_data_updated_at">Data from COVID-19 REST API Portugal, updated at </string>
    <string name="dark_mode_off">Auto Dark Mode OFF</string>
    <string name="dark_mode_on">Auto Dark Mode ON</string>
    <string name="general_weakness">General Weakness</string>
    <string name="shortBreath">Short Breath</string>
    <string name="muscle_ache">Muscle Ache</string>
    <string name="shake_off">Shake OFF</string>
    <string name="shake_on" translatable="false">Shake ON</string>
    <string name="male_cases">Male Cases</string>
    <string name="female_cases">Female Cases</string>

    <string-array name="risk">
        <item name="no_selection">Selecione o nivel de risco</item>
        <item name="low">Baixo</item>
        <item name="low_to_moderate">Baixo a Moderado</item>
        <item name="moderate">Moderado</item>
        <item name="high">Elevado</item>
        <item name="too_high">Muito Elevado</item>
        <item name="extremely_high">Extremamente Elevado</item>
    </string-array>
</resources>