<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/reported_symptoms"
            android:textSize="21sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <TableRow
            android:layout_marginBottom="5dp"
            android:layout_weight="3"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/extra_dry_cogh_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:paddingTop="10dp"
                android:text="@string/dry_cogh"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/extra_dry_cogh_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="81%"
                android:textColor="#FFAA00 "
                android:textSize="23sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_marginBottom="5dp"
            android:layout_weight="3"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/extra_fever_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:paddingTop="10dp"
                android:text="@string/fever"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/extra_fever_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="81%"
                android:textColor="#FFAA00 "
                android:textSize="23sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_marginBottom="5dp"
            android:layout_weight="3"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/extra_headache_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:paddingTop="10dp"
                android:text="@string/headache"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/extra_headache_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="81%"
                android:textColor="#FFAA00 "
                android:textSize="23sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="5dp"
            android:layout_weight="3"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/extra_muscle_ache_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:paddingTop="10dp"
                android:text="@string/muscle_ache"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/extra_muscle_ache_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="81%"
                android:textColor="#FFAA00 "
                android:textSize="23sp"
                android:textStyle="bold" />
        </TableRow>
        <TableRow
            android:layout_marginBottom="5dp"
            android:layout_weight="3"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/extra_general_weakness_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:paddingTop="10dp"
                android:text="@string/general_weakness"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/extra_general_weakness_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="81%"
                android:textColor="#FFAA00 "
                android:textSize="23sp"
                android:textStyle="bold" />
        </TableRow>
        <TableRow
            android:layout_marginBottom="5dp"
            android:layout_weight="3"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/extra_shortBreath_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:paddingTop="10dp"
                android:text="@string/shortBreath"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/extra_shortBreath_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="81%"
                android:textColor="#FFAA00 "
                android:textSize="23sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>
</LinearLayout>

