<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.TestDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        app:navigationIcon="@drawable/abc_vector_test"
        app:title="DetailFragment"
        android:id="@+id/toolbar"
        android:layout_height="56dp"
        android:layout_width="match_parent" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout

        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_test"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            />

        <TextView
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_text_date"
            android:textStyle="bold"
            android:textSize="24dp"
            />

        <TextView
            android:id="@+id/detail_text_date"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="01/01/2021"
            android:textSize="16dp"
            />

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_text_local"
            android:textStyle="bold"
            android:textSize="24dp"
            />

        <TextView
            android:id="@+id/detail_text_local"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hospital Santa Maria"
            android:textSize="16dp"
            />

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_text_result"
            android:textStyle="bold"
            android:textSize="24dp"
            />

        <TextView
            android:id="@+id/detail_text_result"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Negativo"
            android:textSize="16dp"
            />

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_text_comprovative"
            android:textStyle="bold"
            android:textSize="24dp"
            />

        <ImageView
            android:id="@+id/pic_test"
            android:layout_marginTop="18dp"
            android:layout_width="150dp"
            android:layout_height="200dp"

            android:src="@drawable/teste_covid"
            />

        <TextView
            android:id="@+id/detail_file_name"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="Negativo"
            android:textSize="16dp"
            />
    </LinearLayout>

</LinearLayout>